Refactor: remove redundant and deprecated code